--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div class="container-fluid d-flex">
     <div class="row w-100 ml-0">
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-3">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
             <div class="card">
                 <div class="image">
                     <img src="img/world.jpg"/>
@@ -37,7 +37,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-3">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
             <div class="card">
                 <div class="image">
                     <img src="img/mars.jpg"/>
@@ -57,7 +57,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-3">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
             <div class="card">
                 <div class="image">
                     <img src="img/moon.jpg"/>
