--- a/index.html
+++ b/index.html
@@ -26,50 +26,10 @@
                     <button class="about-text">Məlumat</button>
                     <div class="details">
                         <div class="center">
-                            <h1>Earth<br><span>Depazit - 200 ₼<br><span style="font-size: 10px">(Menu Daxil)</span></span></h1>
+                            <h1 style="padding: 10px">Earth<br></h1><span style="font-size: 35px">Depazit - 200 ₼<br></span><span style="font-size: 20px">(Menu Daxil)</span><br>
                             <p>Karaoke, Sinema, Netflix</p>
                             <ul>
                                 <li>Tutum: 15-20 Nəfər</li>
-                                <li>Vaxt Limiti: 3 Saat</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
-            <div class="card">
-                <div class="image">
-                    <img src="img/mars.jpg"/>
-                </div>
-                <div class="about" style="text-align: right">
-                    <button class="about-text">Məlumat</button>
-                    <div class="details">
-                        <div class="center">
-                            <h1>Mars<br><span>Depazit - 100 ₼<br><span style="font-size: 10px">(Menu Daxil)</span></span></h1>
-                            <p>Karaoke, Sinema, Netflix</p>
-                            <ul>
-                                <li>Tutum: 10 Nəfər</li>
-                                <li>Vaxt Limiti: 3 Saat</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
-            <div class="card">
-                <div class="image">
-                    <img src="img/moon.jpg"/>
-                </div>
-                <div class="about" style="text-align: right">
-                    <button class="about-text">Məlumat</button>
-                    <div class="details">
-                        <div class="center">
-                            <h1>Moon<br><span>Depazit - 80 ₼<br><span style="font-size: 10px">(Menu Daxil)</span></span></h1>
-                            <p>Karaoke, Sinema, Netflix</p>
-                            <ul>
-                                <li>Tutum: 6 Nəfər</li>
                                 <li>Vaxt Limiti: 3 Saat</li>
                             </ul>
                         </div>
