--- a/index.html
+++ b/index.html
@@ -11,12 +11,50 @@
 </head>
 <body>
 
-<div>
-    <img src="img/icon.png" class="galaxyicon">
-</div>
-
 <div class="container-fluid d-flex">
     <div class="row w-100 ml-0">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
+            <div class="card">
+                <div class="image">
+                    <img src="img/world.jpg"/>
+                </div>
+                <div class="about" style="text-align: right">
+                    <button class="about-text">Məlumat</button>
+                    <div class="details">
+                        <div class="center">
+                            <h1 style="padding: 60px">Earth<br></h1><span style="font-size: 40px">Depazit - 200 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
+                            <p>Karaoke, Sinema, Netflix</p>
+                            <ul>
+                                <li>Tutum: 15-20 Nəfər</li>
+                                <li>Vaxt Limiti: 3 Saat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
+            <div class="card">
+                <div class="image">
+                    <img src="img/world.jpg"/>
+                </div>
+                <div class="about" style="text-align: right">
+                    <button class="about-text">Məlumat</button>
+                    <div class="details">
+                        <div class="center">
+                            <h1 style="padding: 60px">Earth<br></h1><span style="font-size: 40px">Depazit - 200 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
+                            <p>Karaoke, Sinema, Netflix</p>
+                            <ul>
+                                <li>Tutum: 15-20 Nəfər</li>
+                                <li>Vaxt Limiti: 3 Saat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
             <div class="card">
                 <div class="image">
