--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 <div class="container-fluid d-flex">
     <div class="row w-100 ml-0">
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
-            <div class="card" onclick="myFunction('myDIV')">
+            <div class="card" onclick="myFunction('earth')">
                 <div class="image">
                     <img src="img/world.jpg"/>
                 </div>
                 <div class="about" style="text-align: right">
                     <button class="about-text">Məlumat</button>
-                    <div class="details" id="myDIV" style="display: none">
+                    <div class="details" id="earth" style="display: none">
                         <div class="center">
                             <h1 style="padding: 60px">Earth<br></h1><span style="font-size: 40px">Depazit - 200 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
                             <p>Karaoke, Sinema, Netflix</p>
@@ -35,18 +35,208 @@
         </div>
 
         <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
-            <div class="card" onclick="myFunction('myDIV2')">
+            <div class="card" onclick="myFunction('mars')">
                 <div class="image">
-                    <img src="img/world.jpg"/>
+                    <img src="img/mars.jpg"/>
                 </div>
                 <div class="about" style="text-align: right">
                     <button class="about-text">Məlumat</button>
-                    <div class="details" id="myDIV2" style="display: none">
+                    <div class="details" id="mars" style="display: none">
                         <div class="center">
-                            <h1 style="padding: 60px">Earth<br></h1><span style="font-size: 40px">Depazit - 20 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
+                            <h1 style="padding: 60px">Mars<br></h1><span style="font-size: 40px">Depazit - 100 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
                             <p>Karaoke, Sinema, Netflix</p>
                             <ul>
-                                <li>Tutum: 15-20 Nəfər</li>
+                                <li>Tutum: 10 Nəfər</li>
+                                <li>Vaxt Limiti: 3 Saat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
+            <div class="card" onclick="myFunction('moon')">
+                <div class="image">
+                    <img src="img/moon.jpg"/>
+                </div>
+                <div class="about" style="text-align: right">
+                    <button class="about-text">Məlumat</button>
+                    <div class="details" id="moon" style="display: none">
+                        <div class="center">
+                            <h1 style="padding: 60px">Moon<br></h1><span style="font-size: 40px">Depazit - 80 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
+                            <p>Karaoke, Sinema, Netflix</p>
+                            <ul>
+                                <li>Tutum: 6 Nəfər</li>
+                                <li>Vaxt Limiti: 3 Saat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
+            <div class="card" onclick="myFunction('yupiter')">
+                <div class="image">
+                    <img src="img/yupiter.jpg"/>
+                </div>
+                <div class="about" style="text-align: right">
+                    <button class="about-text">Məlumat</button>
+                    <div class="details" id="yupiter" style="display: none">
+                        <div class="center">
+                            <h1 style="padding: 60px">Yupiter<br></h1><span style="font-size: 40px">Depazit - 80 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
+                            <p>Karaoke, Sinema, Netflix</p>
+                            <ul>
+                                <li>Tutum: 6-8 Nəfər</li>
+                                <li>Vaxt Limiti: 3 Saat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
+            <div class="card" onclick="myFunction('mercury')">
+                <div class="image">
+                    <img src="img/mercury.jpg"/>
+                </div>
+                <div class="about" style="text-align: right">
+                    <button class="about-text">Məlumat</button>
+                    <div class="details" id="mercury" style="display: none">
+                        <div class="center">
+                            <h1 style="padding: 60px;font-size: 120px">Mercury<br></h1><span style="font-size: 40px">Depazit - 60 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
+                            <p>Karaoke, Sinema, Netflix</p>
+                            <ul>
+                                <li>Tutum: 4-5 Nəfər</li>
+                                <li>Vaxt Limiti: 3 Saat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
+            <div class="card" onclick="myFunction('venus')">
+                <div class="image">
+                    <img src="img/venus.jpg"/>
+                </div>
+                <div class="about" style="text-align: right">
+                    <button class="about-text">Məlumat</button>
+                    <div class="details" id="venus" style="display: none">
+                        <div class="center">
+                            <h1 style="padding: 60px">Venus<br></h1><span style="font-size: 40px">Depazit - 60 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
+                            <p>Karaoke, Sinema, Netflix</p>
+                            <ul>
+                                <li>Tutum: 4-5 Nəfər</li>
+                                <li>Vaxt Limiti: 3 Saat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
+            <div class="card" onclick="myFunction('uranus')">
+                <div class="image">
+                    <img src="img/uranus.jpg"/>
+                </div>
+                <div class="about" style="text-align: right">
+                    <button class="about-text">Məlumat</button>
+                    <div class="details" id="uranus" style="display: none">
+                        <div class="center">
+                            <h1 style="padding: 60px">Uranus<br></h1><span style="font-size: 40px">Depazit - 50 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
+                            <p>Smart Tv, Youtube, Ps 4</p>
+                            <ul>
+                                <li>Tutum: 6 Nəfər</li>
+                                <li>Vaxt Limiti: 3 Saat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
+            <div class="card" onclick="myFunction('neptun')">
+                <div class="image">
+                    <img src="img/neptun.jpeg"/>
+                </div>
+                <div class="about" style="text-align: right">
+                    <button class="about-text">Məlumat</button>
+                    <div class="details" id="neptun" style="display: none">
+                        <div class="center">
+                            <h1 style="padding: 60px">Neptun<br></h1><span style="font-size: 40px">Depazit - 50 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
+                            <p>Smart Tv, Youtube</p>
+                            <ul>
+                                <li>Tutum: 5 Nəfər</li>
+                                <li>Vaxt Limiti: 3 Saat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
+            <div class="card" onclick="myFunction('saturn')">
+                <div class="image">
+                    <img src="img/saturn.jpg"/>
+                </div>
+                <div class="about" style="text-align: right">
+                    <button class="about-text">Məlumat</button>
+                    <div class="details" id="saturn" style="display: none">
+                        <div class="center">
+                            <h1 style="padding: 60px">Saturn<br></h1><span style="font-size: 40px">Depazit - 50 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
+                            <p>Smart Tv, Youtube, Ps4</p>
+                            <ul>
+                                <li>Tutum: 5 Nəfər</li>
+                                <li>Vaxt Limiti: 3 Saat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
+            <div class="card" onclick="myFunction('makemake')">
+                <div class="image">
+                    <img src="img/makemake.jpg"/>
+                </div>
+                <div class="about" style="text-align: right">
+                    <button class="about-text">Məlumat</button>
+                    <div class="details" id="makemake" style="display: none">
+                        <div class="center">
+                            <h1 style="padding: 60px;font-size: 95px">Make Make<br></h1><span style="font-size: 40px">Depazit - 40 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
+                            <p>Smart Tv, Youtube, Ps3</p>
+                            <ul>
+                                <li>Tutum: 2 Nəfər</li>
+                                <li>Vaxt Limiti: 3 Saat</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
+            <div class="card" onclick="myFunction('pluto')">
+                <div class="image">
+                    <img src="img/pluto.jpg"/>
+                </div>
+                <div class="about" style="text-align: right">
+                    <button class="about-text">Məlumat</button>
+                    <div class="details" id="pluto" style="display: none">
+                        <div class="center">
+                            <h1 style="padding: 60px">Pluto<br></h1><span style="font-size: 40px">Depazit - 40 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
+                            <p>Smart Tv, Youtube, Ps3</p>
+                            <ul>
+                                <li>Tutum: 2 Nəfər</li>
                                 <li>Vaxt Limiti: 3 Saat</li>
                             </ul>
                         </div>
