--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Galaxy Lounge</title>
 
     <link rel="icon" href="img/icon.png" type="image/png">
-
+    <meta property="og:image" content="image/bg.jpg" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="css/style.css">
@@ -26,11 +26,10 @@
                         <div class="about-text text-center m-0">Məlumatları Göstər</div>
                         <div class="details" style="display: none">
                             <div class="center">
-                                <h1 style="padding: 60px">Pluto<br></h1><span style="font-size: 40px">Depazit - 15 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
-                                <p>Smart Tv, Youtube, Ps3</p>
+                                <h1 style="padding: 80px">Pluto<br></h1><span style="font-size: 40px">Depozit (Menyu Daxil) - 1Saat 15 ₼<br></span><br>
+                                <p class="mt-0">Smart Tv, Youtube,Netflix, PS3</p>
                                 <ul>
                                     <li>Tutum: 2 Nəfər</li>
-                                    <li>Vaxt Limiti: 1 Saat</li>
                                 </ul>
                             </div>
                         </div>
@@ -245,7 +244,7 @@
             </div>
         </div>
 
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop">
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 p-bottomAndTop" style="padding-bottom: 60px">
             <div class="card">
                 <div class="image">
                     <img class="mySlides11" src="img/world.jpg">
