--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Galaxy Lounge</title>
 
     <link rel="icon" href="img/icon.png" type="image/png">
-    <meta property="og:image" content="image/bg.jpg" />
+    <meta property="og:image" content="img/bg.jpg" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="css/style.css">
