--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Galaxy Lounge</title>
 
     <link rel="icon" href="img/icon.png" type="image/png">
-    <meta property="og:image" content="img/bg.jpg" />
+    <meta property="og:image" content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="css/style.css">
@@ -26,7 +26,7 @@
                         <div class="about-text text-center m-0">Məlumatları Göstər</div>
                         <div class="details" style="display: none">
                             <div class="center">
-                                <h1 style="padding: 80px">Pluto<br></h1><span style="font-size: 40px">Depozit (Menyu Daxil) - 1Saat 15 ₼<br></span><br>
+                                <h1 style="padding: 80px">Pluto<br></h1><span style="font-size: 40px">Depozit 1Saat - 15 ₼ (Menyu Daxil)<br></span><br>
                                 <p class="mt-0">Smart Tv, Youtube,Netflix, PS3</p>
                                 <ul>
                                     <li>Tutum: 2 Nəfər</li>
