--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <meta property="og:image" content="https://1.bp.blogspot.com/-a_Okxepdtt8/YDJ3ZASN2XI/AAAAAAAAENM/kuMG6_iYX6IO8qHFRQgM8BxuCPiofBPhACLcBGAsYHQ/s320/sm_5b247f6ea5758.jpg" />
+
     <title>Galaxy Lounge</title>
 
     <link rel="icon" href="img/icon.png" type="image/png">
-    <meta property="og:image" content="http://static01.nyt.com/images/2015/02/19/arts/international/19iht-btnumbers19A/19iht-btnumbers19A-facebookJumbo-v2.jpg" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="css/style.css">
