--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta property="og:image" content="https://1.bp.blogspot.com/-a_Okxepdtt8/YDJ3ZASN2XI/AAAAAAAAENM/kuMG6_iYX6IO8qHFRQgM8BxuCPiofBPhACLcBGAsYHQ/s320/sm_5b247f6ea5758.jpg" />
+    <meta property="og:image" content="https://galaxyloungerooms.blogspot.com/2021/02/blog-post_21.html" />
 
     <title>Galaxy Lounge</title>
 
