--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <meta property="og:image" content="https://galaxyloungerooms.blogspot.com/2021/02/blog-post_21.html" />
+    <meta property="og:image" content="https://1.bp.blogspot.com/-dJ90wUEzNmM/YDKyt6irebI/AAAAAAAAENY/fTpRpnvVUJQlz41MaAKoadL89s01KZHTACLcBGAsYHQ/s320/pluto.jpg" />
 
     <title>Galaxy Lounge</title>
 
