--- a/index.html
+++ b/index.html
@@ -2,9 +2,7 @@
 <head>
     <meta charset="utf-8">
     <meta property="og:image" content="https://1.bp.blogspot.com/-dJ90wUEzNmM/YDKyt6irebI/AAAAAAAAENY/fTpRpnvVUJQlz41MaAKoadL89s01KZHTACLcBGAsYHQ/s1080/pluto.jpg" />
-
     <title>Galaxy Lounge</title>
-
     <link rel="icon" href="img/icon.png" type="image/png">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -27,8 +25,8 @@
                         <div class="about-text text-center m-0">Məlumatları Göstər</div>
                         <div class="details" style="display: none">
                             <div class="center">
-                                <h1 style="padding: 80px">Pluto<br></h1><span style="font-size: 40px">Depozit 1Saat - 15 ₼ (Menyu Daxil)<br></span><br>
-                                <p class="mt-0">Smart Tv, Youtube,Netflix, PS3</p>
+                                <h1 style="padding: 80px" class="fs-120">Pluto<br></h1><span style="font-size: 40px">Depozit 1Saat - 15 ₼ (Menyu Daxil)<br></span><br>
+                                <p class="mt-0">Youtube, Netflix, PS3</p>
                                 <ul>
                                     <li>Tutum: 2 Nəfər</li>
                                 </ul>
@@ -49,8 +47,8 @@
                         <div class="about-text text-center m-0">Məlumatları Göstər</div>
                         <div class="details" style="display: none">
                             <div class="center">
-                                <h1 style="padding: 60px;font-size: 100px">Make Make<br></h1><span style="font-size: 40px">Depazit - 15 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
-                                <p>Smart Tv, Youtube, Ps3</p>
+                                <h1 style="padding: 80px" class="fs-100">Make Make<br></h1><span style="font-size: 40px">Depozit 1Saat - 15 ₼ (Menyu Daxil)<br></span><br>
+                                <p>Youtube, Netflix, PS3</p>
                                 <ul>
                                     <li>Tutum: 2 Nəfər</li>
                                     <li>Vaxt Limiti: 1 Saat</li>
@@ -72,11 +70,10 @@
                     <div class="about-text text-center m-0">Məlumatları Göstər</div>
                     <div class="details" style="display: none">
                         <div class="center">
-                            <h1 style="padding: 60px">Neptune<br></h1><span style="font-size: 40px">Depazit - 15 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
-                            <p>Smart Tv, Youtube</p>
+                            <h1 style="padding: 80px" class="fs-120">Neptune<br></h1><span style="font-size: 40px">Depozit 1Saat - 15 ₼ (Menyu Daxil)<br></span><br>
+                            <p>Youtube, Netflix</p>
                             <ul>
                                 <li>Tutum: 5 Nəfər</li>
-                                <li>Vaxt Limiti: 1 Saat</li>
                             </ul>
                         </div>
                     </div>
@@ -95,11 +92,10 @@
                     <div class="about-text text-center m-0">Məlumatları Göstər</div>
                     <div class="details" style="display: none">
                         <div class="center">
-                            <h1 style="padding: 60px">Uranus<br></h1><span style="font-size: 40px">Depazit - 15 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
-                            <p>Smart Tv, Youtube, Ps4</p>
+                            <h1 style="padding: 80px" class="fs-120">Uranus<br></h1><span style="font-size: 40px">Depozit 1Saat - 15 ₼ (Menyu Daxil)<br></span><br>
+                            <p>Youtube, Netflix, PS4</p>
                             <ul>
                                 <li>Tutum: 6 Nəfər</li>
-                                <li>Vaxt Limiti: 1 Saat</li>
                             </ul>
                         </div>
                     </div>
@@ -111,6 +107,7 @@
             <div class="card">
                 <div class="image">
                     <img class="mySlides5" src="img/saturn.jpg">
+                    <img class="mySlides5" src="img/saturn2.jpg">
                     <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1, 4)">&#10094;</button>
                     <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 4)">&#10095;</button>
                 </div>
@@ -118,11 +115,10 @@
                     <div class="about-text text-center m-0">Məlumatları Göstər</div>
                     <div class="details" style="display: none">
                         <div class="center">
-                            <h1 style="padding: 60px">Saturn<br></h1><span style="font-size: 40px">Depazit - 15 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
-                            <p>Smart Tv, Youtube, Ps4</p>
+                            <h1 style="padding: 80px" class="fs-120">Saturn<br></h1><span style="font-size: 40px">Depozit 1Saat - 15 ₼ (Menyu Daxil)<br></span><br>
+                            <p>Youtube, Netflix, PS4</p>
                             <ul>
                                 <li>Tutum: 6 Nəfər</li>
-                                <li>Vaxt Limiti: 1 Saat</li>
                             </ul>
                         </div>
                     </div>
@@ -134,6 +130,7 @@
             <div class="card">
                 <div class="image">
                     <img class="mySlides6" src="img/mercury.jpg">
+                    <img class="mySlides6" src="img/mercury2.jpg">
                     <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1, 5)">&#10094;</button>
                     <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 5)">&#10095;</button>
                 </div>
@@ -141,11 +138,10 @@
                     <div class="about-text text-center m-0">Məlumatları Göstər</div>
                     <div class="details" style="display: none">
                         <div class="center">
-                            <h1 style="padding: 60px;font-size: 120px">Mercury<br></h1><span style="font-size: 40px">Depazit - 20 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
-                            <p>Karaoke, Sinema, Netflix</p>
+                            <h1 style="padding: 80px" class="fs-120">Mercury<br></h1><span style="font-size: 40px">Depozit 1Saat - 20 ₼ (Menyu Daxil)<br></span><br>
+                            <p>Karaoke, Projector, Netflix</p>
                             <ul>
                                 <li>Tutum: 5 Nəfər</li>
-                                <li>Vaxt Limiti: 1 Saat</li>
                             </ul>
                         </div>
                     </div>
@@ -157,6 +153,7 @@
             <div class="card">
                 <div class="image">
                     <img class="mySlides7" src="img/venus.jpg">
+                    <img class="mySlides7" src="img/venus2.jpg">
                     <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1, 6)">&#10094;</button>
                     <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 6)">&#10095;</button>
                 </div>
@@ -164,11 +161,10 @@
                     <div class="about-text text-center m-0">Məlumatları Göstər</div>
                     <div class="details" style="display: none">
                         <div class="center">
-                            <h1 style="padding: 60px;font-size: 120px">Venus<br></h1><span style="font-size: 40px">Depazit - 20 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
-                            <p>Karaoke, Sinema, Netflix</p>
+                            <h1 style="padding: 80px" class="fs-120">Venus<br></h1><span style="font-size: 40px">Depozit 1Saat - 20 ₼ (Menyu Daxil)<br></span><br>
+                            <p>Karaoke, Projector, Netflix</p>
                             <ul>
                                 <li>Tutum: 5 Nəfər</li>
-                                <li>Vaxt Limiti: 1 Saat</li>
                             </ul>
                         </div>
                     </div>
@@ -180,6 +176,7 @@
             <div class="card">
                 <div class="image">
                     <img class="mySlides8" src="img/moon.jpg">
+                    <img class="mySlides8" src="img/moon2.jpg">
                     <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1, 7)">&#10094;</button>
                     <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 7)">&#10095;</button>
                 </div>
@@ -187,11 +184,10 @@
                     <div class="about-text text-center m-0">Məlumatları Göstər</div>
                     <div class="details" style="display: none">
                         <div class="center">
-                            <h1 style="padding: 60px;font-size: 120px">Moon<br></h1><span style="font-size: 40px">Depazit - 30 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
-                            <p>Karaoke, Sinema, Netflix</p>
+                            <h1 style="padding: 80px" class="fs-120">Moon<br></h1><span style="font-size: 40px">Depozit 1Saat - 30 ₼ (Menyu Daxil)<br></span><br>
+                            <p>Karaoke, Projector, Netflix</p>
                             <ul>
                                 <li>Tutum: 7 Nəfər</li>
-                                <li>Vaxt Limiti: 1 Saat</li>
                             </ul>
                         </div>
                     </div>
@@ -203,6 +199,7 @@
             <div class="card">
                 <div class="image">
                     <img class="mySlides9" src="img/yupiter.jpg">
+                    <img class="mySlides9" src="img/yupiter2.jpg">
                     <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1, 8)">&#10094;</button>
                     <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 8)">&#10095;</button>
                 </div>
@@ -210,11 +207,10 @@
                     <div class="about-text text-center m-0">Məlumatları Göstər</div>
                     <div class="details" style="display: none">
                         <div class="center">
-                            <h1 style="padding: 60px;font-size: 120px">Yupiter<br></h1><span style="font-size: 40px">Depazit - 30 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
-                            <p>Karaoke, Sinema, Netflix</p>
+                            <h1 style="padding: 80px" class="fs-120">Yupiter<br></h1><span style="font-size: 40px">Depozit 1Saat - 30 ₼ (Menyu Daxil)<br></span><br>
+                            <p>Karaoke, Projector, Netflix</p>
                             <ul>
                                 <li>Tutum: 8 Nəfər</li>
-                                <li>Vaxt Limiti: 1 Saat</li>
                             </ul>
                         </div>
                     </div>
@@ -226,6 +222,7 @@
             <div class="card">
                 <div class="image">
                     <img class="mySlides10" src="img/mars.jpg">
+                    <img class="mySlides10" src="img/mars2.jpg">
                     <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1, 9)">&#10094;</button>
                     <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 9)">&#10095;</button>
                 </div>
@@ -233,11 +230,10 @@
                     <div class="about-text text-center m-0">Məlumatları Göstər</div>
                     <div class="details" style="display: none">
                         <div class="center">
-                            <h1 style="padding: 60px;font-size: 120px">Mars<br></h1><span style="font-size: 40px">Depazit - 30 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
-                            <p>Karaoke, Sinema, Netflix</p>
+                            <h1 style="padding: 80px" class="fs-120">Mars<br></h1><span style="font-size: 40px">Depozit 1Saat - 30 ₼ (Menyu Daxil)<br></span><br>
+                            <p>Karaoke, Projector, Netflix</p>
                             <ul>
                                 <li>Tutum: 8 Nəfər</li>
-                                <li>Vaxt Limiti: 1 Saat</li>
                             </ul>
                         </div>
                     </div>
@@ -249,6 +245,7 @@
             <div class="card">
                 <div class="image">
                     <img class="mySlides11" src="img/world.jpg">
+                    <img class="mySlides11" src="img/world2.jpg">
                     <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1, 11)">&#10094;</button>
                     <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 11)">&#10095;</button>
                 </div>
@@ -256,11 +253,10 @@
                     <div class="about-text text-center m-0">Məlumatları Göstər</div>
                     <div class="details" style="display: none">
                         <div class="center">
-                            <h1 style="padding: 60px;font-size: 120px">Earth<br></h1><span style="font-size: 40px">Depazit - 60 ₼<br></span><span style="font-size: 30px">(Menu Daxil)</span><br>
-                            <p>Karaoke, Sinema, Netflix</p>
+                            <h1 style="padding: 80px" class="fs-120">Earth<br></h1><span style="font-size: 40px">Depozit 1Saat - 60 ₼ (Menyu Daxil)<br></span><br>
+                            <p>Karaoke, Projector, Netflix</p>
                             <ul>
                                 <li>Tutum: 20 Nəfər</li>
-                                <li>Vaxt Limiti: 1 Saat</li>
                             </ul>
                         </div>
                     </div>
