--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
                                 <p>Youtube, Netflix, PS3</p>
                                 <ul>
                                     <li>Tutum: 2 Nəfər</li>
-                                    <li>Vaxt Limiti: 1 Saat</li>
                                 </ul>
                             </div>
                         </div>
@@ -63,6 +62,7 @@
             <div class="card">
                 <div class="image">
                     <img class="mySlides3" src="img/neptun.jpeg">
+                    <img class="mySlides3" src="img/neptun2.jpeg">
                     <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1, 2)">&#10094;</button>
                     <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1, 2)">&#10095;</button>
                 </div>
